# Online-Crowd-Analyzer

./: .gitignore  LICENSE  README.md  config.py  config.yaml  converter.py  example_config.yaml  main.py  number_counter.py  pyproject.toml  pyproject_converter.toml
counter/: counter.py  detector.py  parallel_counter.py  trackableobject.py  tracker.py
counter/detectors/coral/: coral.py
counter/detectors/hog/: hog.py
counter/detectors/mobile/: mobile.py
counter/detectors/yolo/: yolo.py
counter/trackers/centroidtracker/: centroidtracker.py
counter/trackers/sort/: sort.py
